syntax = "proto3";
package sro.accounts;
option go_package = "pkg/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "authorization.proto";
import "google/protobuf/wrappers.proto";

service UserService {
  rpc GetAll(google.protobuf.Empty) returns (GetAllUsersResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }

  rpc Get(GetUserMessage) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/users/{username}"
    };
  }

  rpc Edit(EditUserDetailsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/users/{username}"
      body: "*"
    };
  }

  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/users/{username}/password"
      body: "*"
    };
  }

  rpc Ban(GetUserMessage) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/users/{username}/ban"
      body: "*"
    };
  }

  rpc UnBan(GetUserMessage) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/users/{username}/unban"
      body: "*"
    };
  }

  rpc GetStatus(GetUserMessage) returns (StatusResponse) {
    option (google.api.http) = {
      get: "/v1/users/{username}/status"
    };
  }

  rpc SetStatus(RequestSetStatus) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/users/{username}/status"
      body: "*"
    };
  }
}

message GetUserMessage {
  string username = 1;
}

message UserMessage {
  string username = 1;
  string email = 2;
  repeated UserRole roles = 6;
  google.protobuf.StringValue current_character = 7;
  string createdAt = 15;
  string updatedAt = 16;
  google.protobuf.StringValue bannedAt = 17;
}

message GetUserResponse {
  string username = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  repeated UserRole roles = 6;
  repeated UserPermission permissions = 7;
  google.protobuf.StringValue current_character = 8;
  string createdAt = 15;
  string updatedAt = 16;
  google.protobuf.StringValue bannedAt = 17;
}

message GetAllUsersResponse {
  repeated UserMessage users = 1;
}

message EditUserDetailsRequest {
  string username = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue new_username= 3;
  google.protobuf.StringValue first_name = 5;
  google.protobuf.StringValue last_name = 6;
}

message ChangePasswordRequest {
  string username = 1;
  string current_password = 2;
  string new_password = 3;
}

message StatusResponse {
  // The character id that is currently playing. If 0, then the user is not signed in.
  google.protobuf.StringValue character_name = 1;
}

message RequestSetStatus {
  string username = 1;

  // The character id that is currently playing. If 0, then the user is not signed in.
  google.protobuf.StringValue character_name = 2;
}
